<resources>
    <string name="app_name">The Brewix</string>
    <string name="ppIntro">Welcome to The Brewix app. Your privacy is important to us. Please read the following privacy policy ("Policy") carefully to understand how we collect, use, and share information about you when you use the app.</string>
    <string name="pp1">Collection of information: When you use the app, we may collect information about you, including but not limited to your name, email address, phone number, and location. We may also collect information about your device, including but not limited to the devices IP address, operating system, and browser type.</string>
    <string name="pp2">Use of information: We may use the information we collect about you for the following purposes: (1) To provide and improve the app: We may use the information we collect to personalize your experience and to improve the app. (2) To communicate with you: We may use the information we collect to contact you about updates to the app, promotions, and other information that may be of interest to you. (3) For research and development: We may use the information we collect to conduct research and development to improve the app.</string>
    <string name="pp3">Sharing of information: We may share the information we collect about you with third parties for the following purposes: (1) To service providers: We may share the information we collect with service providers that perform functions on our behalf, such as hosting, data analysis, and marketing. (2) In the event of a merger or acquisition: If The Brewix is acquired by or merged with another company, we may share the information we collect with that company. (3) As required by law: We may disclose the information we collect if we are required to do so by law or if we believe it is necessary to protect the rights, property, or safety of The Brewix, our customers, or others.</string>
    <string name="pp4">Data retention: We will retain the information we collect about you for as long as necessary to fulfil the purposes outlined in this Policy, unless a longer retention period is required or permitted by law.</string>
    <string name="pp5">Data security: We take reasonable measures to protect the information we collect from unauthorized access, use, or disclosure. However, no method of transmission over the internet, or method of electronic storage, is 100% secure, and we cannot guarantee the security of the information we collect.</string>
    <string name="pp6">Childrens privacy: The app is not intended for children under the age of 13. We do not knowingly collect personal information from children under the age of 13. If you are a parent or guardian and you believe that your child under the age of 13 has provided personal information to us, please contact us at support@thebrewix.com and we will take steps to delete such information from our records.</string>
    <string name="pp7">Changes to this policy: We may update this Policy from time to time. Any changes to this Policy will be effective immediately upon posting on the app. We encourage you to review this Policy periodically to stay informed about how we collect, use, and share information about you.</string>
    <string name="pp8">Contact us: If you have any questions or concerns about this Policy, please contact us at support@thebrewix.com</string>
    <string name="tcIntro">Welcome to The Brewix App. Please read these terms of use ("Terms") carefully before using the app. By accessing or using the app, you agree to be bound by these Terms. If you do not agree to these Terms, do not use the app.</string>
    <string name="tc1">License to use the app: The Brewix grants you a limited, non-exclusive, non-transferable, revocable license to use the app for your personal, non-commercial use. You may not use the app for any other purpose, or in any other manner, without The Brewix prior written consent.</string>
    <string name="tc2">Intellectual property rights: The app and all content and materials included on it, including but not limited to text, graphics, logos, images, and software, are the property of The Brewix or its licensors and are protected by copyright and trademark laws. You may not use any content or materials on the app for any commercial purpose without the express written consent of The Brewix.</string>
    <string name="tc3">Disclaimer of warranties: The app is provided on an "as is" and "as available" basis. The Brewix makes no representations or warranties of any kind, express or implied, as to the operation of the app or the information, content, materials, or products included on it. The Brewix will not be liable for any damages of any kind arising from the use of the app, including but not limited to direct, indirect, incidental, punitive, and consequential damages.</string>
    <string name="tc4">User conduct: You agree to use the app only for lawful purposes and in a way that does not infringe the rights of, restrict or inhibit anyone else use and enjoyment of the app. You may not use the app to transmit or send unsolicited commercial communications.</string>
    <string name="tc5">Modification of these terms: The Brewix reserves the right to modify these Terms at any time without prior notice. Any changes to these Terms will be effective immediately upon posting on the app. Your continued use of the app after any such changes constitutes your acceptance of the new Terms.</string>
    <string name="tc6">Governing law: These Terms and your use of the app will be governed by and construed in accordance with the laws of Malaysia, and any disputes arising out of or in connection with these Terms or the app will be subject to the exclusive jurisdiction of the courts of Malaysia.</string>
    <string name="tc7">Entire agreement: These Terms constitute the entire agreement between you and The Brewix with respect to the app and supersede all prior or contemporaneous communications and proposals, whether oral or written, between you and The Brewix.</string>
    <string name="tc8">Severability: If any provision of these Terms is found to be invalid or unenforceable, that provision will be enforced to the maximum extent possible, and the remaining provisions of these Terms will remain in full force and effect.</string>
    <string name="tc9">Waiver: The failure of The Brewix to exercise or enforce any right or provision of these Terms will not constitute a waiver of such right or provision.</string>
    <string name="tc10">Contact us: If you have any questions about these Terms, please contact us at support@thebrewix.com.</string>
    <string name="email_preferences_1">I do not wish to receive any direct marketing communications from The Brewix Malaysia.</string>
    <string name="email_preferences_2">Please note that if you are a Brewix Rewards TM members and you opt out of receiving direct marketing communications from us, you will not able to receive any membership communications thereafter (including but not limited to information about membership program, rewards and membership renewal).</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>