<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".terms_of_use">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:scaleType="fitStart"
                    android:id="@+id/backBtn"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="46dp"
                    android:text="Terms of use"
                    android:fontFamily="@font/medium"
                    android:textSize="24dp"
                    android:textColor="@color/primary1"
                    android:textAlignment="center"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/grey"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tcIntro"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc3"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc4"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc5"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc6"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc7"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc8"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc9"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="36dp"
                        android:fontFamily="@font/light"
                        android:textColor="@color/primary1"
                        android:textSize="14dp"
                        android:text="@string/tc10"/>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>